<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yangcao.simpleresume.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/user_name_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/user_picture"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/caption_text_size"
                            tools:text="@string/basic_info_name" />

                        <ImageButton
                            android:id="@+id/edit_basic_info_btn"
                            android:layout_width="@dimen/icon_button_size"
                            android:layout_height="@dimen/icon_button_size"
                            android:layout_marginLeft="@dimen/spacing_xsmall"
                            android:src="@drawable/ic_mode_edit_black_18dp"
                            android:background="?attr/selectableItemBackground"
                            android:contentDescription="@string/edit_basic_info"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/user_name_layout"
                        android:layout_toLeftOf="@+id/user_picture"
                        tools:text="@string/basic_info_email" />

                    <ImageView
                        android:id="@+id/user_picture"
                        android:layout_width="@dimen/user_picture_size"
                        android:layout_height="@dimen/user_picture_size"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_user_ghost"
                        android:contentDescription="@string/user_picture"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_small">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/caption_text_size"
                        android:textAllCaps="true"
                        android:text="@string/section_education" />

                    <ImageButton
                        android:id="@+id/add_education_btn"
                        android:layout_width="@dimen/icon_button_size"
                        android:layout_height="@dimen/icon_button_size"
                        android:src="@drawable/ic_add_black_18dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/add_education"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/educations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/section_experience"
                        android:textSize="@dimen/caption_text_size"
                        android:textAllCaps="true"/>

                    <ImageButton
                        android:id="@+id/add_experience_btn"
                        android:layout_width="@dimen/icon_button_size"
                        android:layout_height="@dimen/icon_button_size"
                        android:src="@drawable/ic_add_black_18dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/add_experience"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/experiences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_small">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/section_project"
                        android:textAllCaps="true"
                        android:textSize="@dimen/caption_text_size"/>

                    <ImageButton
                        android:id="@+id/add_project_btn"
                        android:layout_width="@dimen/icon_button_size"
                        android:layout_height="@dimen/icon_button_size"
                        android:src="@drawable/ic_add_black_18dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/add_project"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/projects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_sections_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_medium"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_margin="@dimen/spacing_medium"
        android:layout_gravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
